Bug 1602386 - Fix build on FreeBSD/powerpc platforms. r=jcj

FreeBSD has elf_aux_info instead of getauxval, but only since FreeBSD 12. Previous versions (11 is still supported) don't have any equivalent and users need to query sysctl manually.

Differential Revision: https://phabricator.services.mozilla.com/D56712

--HG--
extra : moz-landing-system : lando